--- a/src/assets/css/styless.css
+++ b/src/assets/css/styless.css
@@ -5812,7 +5812,7 @@ background-color: #C89B32 0% 0% no-repeat padding-box;
 }
 
 .btn-outline-success:hover {
-  color: #212529;
+  color: #288731;
   background-color: #1bcfb4;
   border-color: #1bcfb4;
 }
@@ -5845,14 +5845,14 @@ background-color: #C89B32 0% 0% no-repeat padding-box;
 }
 
 .btn-outline-info {
-  color: #198ae3;
-  border-color: #198ae3;
+  color: #288731;
+  border-color: #288731;
 }
 
 .btn-outline-info:hover {
   color: #fff;
-  background-color: #198ae3;
-  border-color: #198ae3;
+  background-color: #288731;
+  border-color: #288731;
 }
 
 .btn-outline-info:focus,
@@ -5863,7 +5863,7 @@ background-color: #C89B32 0% 0% no-repeat padding-box;
 
 .btn-outline-info.disabled,
 .btn-outline-info:disabled {
-  color: #198ae3;
+  color: #288731;
   background-color: transparent;
 }
 
@@ -5871,8 +5871,8 @@ background-color: #C89B32 0% 0% no-repeat padding-box;
 .btn-outline-info:not(:disabled):not(.disabled).active,
 .show>.btn-outline-info.dropdown-toggle {
   color: #fff;
-  background-color: #198ae3;
-  border-color: #198ae3;
+  background-color: #288731;
+  border-color: #288731;
 }
 
 .btn-outline-info:not(:disabled):not(.disabled):active:focus,
@@ -16380,9 +16380,8 @@ code {
 .btn-outline-info:hover,
 .btn-outline-info:focus,
 .btn-outline-info:active {
-  background: -webkit-gradient(linear, left top, right top, from(#90caf9), color-stop(99%, #047edf));
-  background: linear-gradient(to right, #90caf9, #047edf 99%);
-  color: #000;
+  background-color: #288731;
+  color: #ffffff;
 }
 
 .btn-inverse-warning {
@@ -16442,7 +16441,7 @@ code {
 .btn-outline-warning:active {
   background: -webkit-gradient(linear, left top, right top, from(#f6e384), to(#ffd500));
   background: linear-gradient(to right, #f6e384, #ffd500);
-  color: #000;
+  color: #ffffff;
 }
 
 .btn-inverse-danger {
